--- a/spring-boot-module/src/main/resources/mail.properties
+++ b/spring-boot-module/src/main/resources/mail.properties
@@ -2,3 +2,7 @@ mail.host=smtp.gmail.com
 mail.port=587
 mail.username=
 mail.password=
+mail.transport.protocol=smtp
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.debug=true
